Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ button:hover {
     <a href="about.html">About</a> |
     <a href="privacy.html">Privacy Policy</a> |
     <a href="disclaimer.html">Disclaimer</a> |
-    Contact: anilbmicalculator@gmail.com
+    Contact: anilvella999@gmail.com
     <br><br>
     © 2026 Anil BMI Calculator
 </div>
@@ -137,4 +137,5 @@ function calculateBMI() {
 </script>
 
 </body>
+
 </html>
