--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@ button {
 <a href="products.html" class="link-btn">View Recommended Fitness Products</a>
 
 <div class="footer">
+Contact: <a href="mailto:anilvella999@gmail.com">anilvella999@gmail.com</a>
+<br><br>
 © 2026 Anil BMI Calculator
 </div>
 </div>
@@ -112,3 +114,4 @@ document.getElementById("result").innerHTML =
 
 </body>
 </html>
+
