--- a/products.html
+++ b/products.html
@@ -39,6 +39,10 @@ a { display: block; margin: 10px 0; padding: 10px; background: #4facfe; color: w
 As an Amazon Associate, I earn from qualifying purchases.
 </p>
 
+<p style="font-size:13px;">
+Contact: <a href="mailto:anilvella999@gmail.com">anilvella999@gmail.com</a>
+</p>
+
 </div>
 
 </body>
