--- a/what-is-bmi.html
+++ b/what-is-bmi.html
@@ -1,31 +1,52 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>What is BMI? Complete Guide</title>
+<meta charset="UTF-8">
+<title>What is BMI? Complete Guide for Indian Adults</title>
+<meta name="description" content="Learn what BMI is, how it is calculated, and why it matters for Indian adults. Complete beginner-friendly guide.">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style>
-body { font-family: Arial; padding: 40px; line-height: 1.6; }
-</style>
 </head>
-<body>
+<body style="font-family: Arial; max-width: 800px; margin: 40px auto; line-height: 1.6;">
 
-<h2>What is BMI?</h2>
+<h1>What is BMI? Complete Guide for Indian Adults</h1>
 
-<p>BMI (Body Mass Index) is a simple calculation used to assess whether a person has a healthy body weight for their height.</p>
+<p>Body Mass Index (BMI) is a simple measurement that helps determine whether a person has a healthy body weight for their height. It is widely used by doctors, fitness professionals, and health organizations worldwide.</p>
 
-<p>It is calculated by dividing weight in kilograms by height in meters squared.</p>
+<h2>How is BMI Calculated?</h2>
 
-<h3>BMI Categories</h3>
+<p>BMI is calculated using the formula:</p>
+
+<p><strong>BMI = Weight (kg) / Height (m²)</strong></p>
+
+<p>For example, if your weight is 70 kg and your height is 1.7 meters, your BMI would be:</p>
+
+<p>70 / (1.7 × 1.7) = 24.22</p>
+
+<h2>BMI Categories for Indian Adults</h2>
+
 <ul>
 <li>Below 18.5 – Underweight</li>
-<li>18.5 to 24.9 – Normal weight</li>
-<li>25 to 29.9 – Overweight</li>
-<li>30 and above – Obese</li>
+<li>18.5 – 22.9 – Normal</li>
+<li>23 – 24.9 – Overweight</li>
+<li>25 and above – Obese</li>
 </ul>
 
-<p>Maintaining a healthy BMI helps reduce the risk of heart disease, diabetes, and other health problems.</p>
+<p>Indian BMI standards are slightly stricter compared to international standards because Indians are more prone to diabetes and heart-related conditions at lower BMI levels.</p>
 
-<p><a href="index.html">Back to BMI Calculator</a></p>
+<h2>Why BMI is Important</h2>
+
+<p>Maintaining a healthy BMI can reduce the risk of:</p>
+
+<ul>
+<li>Heart disease</li>
+<li>Type 2 diabetes</li>
+<li>High blood pressure</li>
+<li>Joint problems</li>
+</ul>
+
+<p>However, BMI does not measure body fat directly. It should be used as a screening tool, not a final diagnosis.</p>
+
+<p>You can calculate your BMI instantly using our <a href="index.html">Free BMI Calculator</a>.</p>
 
 </body>
 </html>
