Fix HTML structure and add additional links

--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@ button {
 .result {
     margin-top: 15px;
     font-weight: bold;
+    <p>
+    Read more:
+    <a href="what-is-bmi.html">What is BMI?</a> |
+    <a href="healthy-weight-tips.html">Healthy Weight Tips</a>
+    </p>
 }
 
 .link-btn {
@@ -114,4 +119,5 @@ document.getElementById("result").innerHTML =
 
 </body>
 </html>
+
 
