--- a/products.html
+++ b/products.html
@@ -1,47 +1,91 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+<meta charset="UTF-8">
 <title>Recommended Fitness Products</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-body { font-family: Arial; text-align: center; background: #f4f4f4; }
-.container { max-width: 700px; margin: 40px auto; background: white; padding: 20px; border-radius: 8px; }
-a { display: block; margin: 10px 0; padding: 10px; background: #4facfe; color: white; text-decoration: none; border-radius: 5px; }
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background-color: #121212;
+    color: #ffffff;
+}
+.container {
+    max-width: 900px;
+    margin: auto;
+    padding: 20px;
+}
+.card {
+    background-color: #1e1e1e;
+    padding: 25px;
+    border-radius: 12px;
+    margin-top: 20px;
+    border: 1px solid #2a2a2a;
+}
+a.product {
+    display: block;
+    padding: 12px;
+    margin: 10px 0;
+    background: linear-gradient(90deg, #4facfe, #00f2fe);
+    color: white;
+    text-decoration: none;
+    border-radius: 6px;
+}
+a.product:hover {
+    opacity: 0.9;
+}
+a {
+    color: #4facfe;
+}
+.footer {
+    margin-top: 40px;
+    font-size: 14px;
+    color: #aaa;
+    text-align: center;
+}
 </style>
 </head>
+
 <body>
 
 <div class="container">
+
 <h1>Recommended Fitness Products</h1>
 
+<div class="card">
+
 <h3>Underweight</h3>
-<a href="https://amzn.to/3OCTjGa" target="_blank">MuscleBlaze Mass Gainer</a>
-<a href="https://amzn.to/474Itiv" target="_blank">Whey Protein</a>
-<a href="https://amzn.to/4r0xde6" target="_blank">Natural Peanut Butter</a>
+<a class="product" href="https://amzn.to/3OCTjGa" target="_blank">MuscleBlaze Mass Gainer</a>
+<a class="product" href="https://amzn.to/474Itiv" target="_blank">Whey Protein</a>
+<a class="product" href="https://amzn.to/4r0xde6" target="_blank">Natural Peanut Butter</a>
 
 <h3>Normal BMI</h3>
-<a href="https://amzn.to/4qVkxoP" target="_blank">Yoga Mat</a>
-<a href="https://amzn.to/4cnronD" target="_blank">Resistance Bands</a>
-<a href="https://amzn.to/4rGeztm" target="_blank">Fitness Band</a>
+<a class="product" href="https://amzn.to/4qVkxoP" target="_blank">Yoga Mat</a>
+<a class="product" href="https://amzn.to/4cnronD" target="_blank">Resistance Bands</a>
+<a class="product" href="https://amzn.to/4rGeztm" target="_blank">Fitness Band</a>
 
 <h3>Overweight</h3>
-<a href="https://amzn.to/4rBEMsP" target="_blank">Digital Weighing Scale</a>
-<a href="https://amzn.to/3OQZF4N" target="_blank">Skipping Rope</a>
-<a href="https://amzn.to/3MThgZk" target="_blank">Dumbbells Set</a>
+<a class="product" href="https://amzn.to/4rBEMsP" target="_blank">Digital Weighing Scale</a>
+<a class="product" href="https://amzn.to/3OQZF4N" target="_blank">Skipping Rope</a>
+<a class="product" href="https://amzn.to/3MThgZk" target="_blank">Dumbbells Set</a>
 
 <h3>Obese</h3>
-<a href="https://amzn.to/4aWfEGe" target="_blank">Body Fat Analyzer Scale</a>
-<a href="https://amzn.to/3MM1P5c" target="_blank">Exercise Cycle</a>
-<a href="https://amzn.to/4lhRr21" target="_blank">Treadmill</a>
+<a class="product" href="https://amzn.to/4aWfEGe" target="_blank">Body Fat Analyzer Scale</a>
+<a class="product" href="https://amzn.to/3MM1P5c" target="_blank">Exercise Cycle</a>
+<a class="product" href="https://amzn.to/4lhRr21" target="_blank">Treadmill</a>
 
 <p style="margin-top:20px;font-size:13px;">
 As an Amazon Associate, I earn from qualifying purchases.
 </p>
 
-<p style="font-size:13px;">
-Contact: <a href="mailto:anilvella999@gmail.com">anilvella999@gmail.com</a>
-</p>
+</div>
+
+<div class="footer">
+Contact: <a href="mailto:anilvella999@gmail.com">anilvella999@gmail.com</a><br>
+© 2026 Anil BMI Calculator
+</div>
 
 </div>
 
