--- a/healthy-weight-tips.html
+++ b/healthy-weight-tips.html
@@ -3,36 +3,70 @@
 <head>
 <meta charset="UTF-8">
 <title>Healthy Weight Tips for Indian Adults</title>
-<meta name="description" content="Practical tips to maintain healthy body weight for Indian adults. Diet, exercise, and lifestyle guide.">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<style>
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background-color: #121212;
+    color: #ffffff;
+}
+.container {
+    max-width: 900px;
+    margin: auto;
+    padding: 20px;
+}
+.card {
+    background-color: #1e1e1e;
+    padding: 25px;
+    border-radius: 12px;
+    border: 1px solid #2a2a2a;
+}
+a {
+    color: #4facfe;
+}
+.footer {
+    margin-top: 40px;
+    font-size: 14px;
+    color: #aaa;
+    text-align: center;
+}
+</style>
 </head>
-<body style="font-family: Arial; max-width: 800px; margin: 40px auto; line-height: 1.6;">
+
+<body>
+
+<div class="container">
+
+<div class="card">
 
 <h1>Healthy Weight Tips for Indian Adults</h1>
 
-<p>Maintaining a healthy body weight is important for long-term health and well-being. Here are practical tips to help Indian adults stay fit and active.</p>
+<p>Maintaining a healthy body weight requires balanced nutrition, regular physical activity, and proper lifestyle habits.</p>
 
-<h2>1. Balanced Diet</h2>
+<h2>1. Eat a Balanced Diet</h2>
+<p>Include proteins, complex carbohydrates, vegetables, and healthy fats in your meals. Avoid excessive sugar and processed foods.</p>
 
-<p>Include a mix of proteins, healthy fats, and complex carbohydrates in your meals. Reduce excessive sugar and processed food intake.</p>
-
-<h2>2. Regular Physical Activity</h2>
-
-<p>Aim for at least 30 minutes of exercise daily. Walking, cycling, yoga, and strength training are excellent options.</p>
+<h2>2. Exercise Regularly</h2>
+<p>Aim for at least 30 minutes of physical activity daily such as walking, yoga, cycling, or strength training.</p>
 
 <h2>3. Stay Hydrated</h2>
-
-<p>Drinking enough water helps control hunger and improves metabolism.</p>
+<p>Drinking enough water helps improve metabolism and control hunger.</p>
 
 <h2>4. Sleep Properly</h2>
+<p>Getting 7–8 hours of quality sleep supports healthy weight management.</p>
 
-<p>Getting 7–8 hours of quality sleep supports weight management and overall health.</p>
+<p><a href="index.html">← Back to BMI Calculator</a></p>
 
-<h2>5. Monitor Your BMI</h2>
+</div>
 
-<p>Regularly check your BMI using our <a href="index.html">BMI Calculator</a> to track progress.</p>
+<div class="footer">
+Contact: <a href="mailto:anilvella999@gmail.com">anilvella999@gmail.com</a><br>
+© 2026 Anil BMI Calculator
+</div>
 
-<p>Healthy weight management is about consistency and sustainable habits, not quick fixes.</p>
+</div>
 
 </body>
 </html>
