--- a/healthy-weight-tips.html
+++ b/healthy-weight-tips.html
@@ -2,60 +2,46 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Healthy Weight Tips for Indian Adults</title>
+<title>Healthy Weight Tips</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-    background-color: #121212;
-    color: #ffffff;
-}
-.container {
-    max-width: 900px;
-    margin: auto;
-    padding: 20px;
-}
-.card {
-    background-color: #1e1e1e;
-    padding: 25px;
-    border-radius: 12px;
-    border: 1px solid #2a2a2a;
-}
-a {
-    color: #4facfe;
-}
-.footer {
-    margin-top: 40px;
-    font-size: 14px;
-    color: #aaa;
-    text-align: center;
-}
+body { margin:0; font-family:Arial; background:#121212; color:#fff; }
+.navbar { background:#1a1a1a; padding:15px; text-align:center; border-bottom:1px solid #2a2a2a; }
+.navbar a { color:#fff; margin:0 15px; text-decoration:none; font-weight:bold; }
+.navbar a:hover { color:#4facfe; }
+.container { max-width:900px; margin:auto; padding:20px; }
+.card { background:#1e1e1e; padding:25px; border-radius:12px; border:1px solid #2a2a2a; margin-top:20px; }
+.footer { margin-top:40px; font-size:14px; color:#aaa; text-align:center; }
+a { color:#4facfe; }
 </style>
 </head>
 
 <body>
 
+<div class="navbar">
+<a href="index.html">Home</a>
+<a href="what-is-bmi.html">What is BMI?</a>
+<a href="healthy-weight-tips.html">Healthy Tips</a>
+<a href="products.html">Products</a>
+</div>
+
 <div class="container">
 
 <div class="card">
+<h1>Healthy Weight Tips</h1>
 
-<h1>Healthy Weight Tips for Indian Adults</h1>
+<h3>1. Balanced Diet</h3>
+<p>Eat protein, vegetables, complex carbohydrates and healthy fats.</p>
 
-<p>Maintaining a healthy body weight requires balanced nutrition, regular physical activity, and proper lifestyle habits.</p>
+<h3>2. Exercise Daily</h3>
+<p>Aim for at least 30 minutes of physical activity.</p>
 
-<h2>1. Eat a Balanced Diet</h2>
-<p>Include proteins, complex carbohydrates, vegetables, and healthy fats in your meals. Avoid excessive sugar and processed foods.</p>
+<h3>3. Sleep Well</h3>
+<p>7–8 hours of sleep helps maintain healthy weight.</p>
 
-<h2>2. Exercise Regularly</h2>
-<p>Aim for at least 30 minutes of physical activity daily such as walking, yoga, cycling, or strength training.</p>
-
-<h2>3. Stay Hydrated</h2>
-<p>Drinking enough water helps improve metabolism and control hunger.</p>
-
-<h2>4. Sleep Properly</h2>
-<p>Getting 7–8 hours of quality sleep supports healthy weight management.</p>
+<h3>4. Stay Hydrated</h3>
+<p>Drinking enough water improves metabolism.</p>
 
 <p><a href="index.html">← Back to BMI Calculator</a></p>
 
@@ -67,6 +53,5 @@ Contact: <a href="mailto:anilvella999@gmail.com">anilvella999@gmail.com</a><br>
 </div>
 
 </div>
-
 </body>
 </html>
