--- a/index.html
+++ b/index.html
@@ -5,178 +5,124 @@
 <title>Free BMI Calculator for Indian Adults 2026</title>
 <meta name="description" content="Free BMI Calculator for Indian adults. Check your Body Mass Index instantly and know your healthy weight range.">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="canonical" href="https://anil1266.github.io/bmicalculator/">
 
 <style>
-body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-    background-color: #121212;
-    color: #ffffff;
-}
+body { margin:0; font-family:Arial; background:#121212; color:#fff; }
 
-.container {
-    max-width: 900px;
-    margin: auto;
-    padding: 20px;
+.navbar {
+background:#1a1a1a;
+padding:15px;
+text-align:center;
+border-bottom:1px solid #2a2a2a;
 }
+.navbar a {
+color:#fff;
+margin:0 15px;
+text-decoration:none;
+font-weight:bold;
+}
+.navbar a:hover { color:#4facfe; }
+
+.container { max-width:900px; margin:auto; padding:20px; }
 
 .card {
-    background-color: #1e1e1e;
-    padding: 25px;
-    border-radius: 12px;
-    margin-top: 20px;
-    border: 1px solid #2a2a2a;
-    text-align: center;
+background:#1e1e1e;
+padding:25px;
+border-radius:12px;
+border:1px solid #2a2a2a;
+margin-top:20px;
+text-align:center;
 }
 
 input {
-    width: 100%;
-    padding: 12px;
-    margin-bottom: 10px;
-    border-radius: 6px;
-    border: 1px solid #333;
-    background-color: #222;
-    color: white;
-    font-size: 16px;
+width:100%;
+padding:12px;
+margin-bottom:10px;
+border-radius:6px;
+border:1px solid #333;
+background:#222;
+color:#fff;
 }
 
 input:focus {
-    border-color: #4facfe;
-    outline: none;
-    box-shadow: 0 0 5px #4facfe;
+border-color:#4facfe;
+outline:none;
+box-shadow:0 0 5px #4facfe;
 }
 
 button {
-    width: 100%;
-    padding: 12px;
-    border-radius: 6px;
-    border: none;
-    background: linear-gradient(90deg, #4facfe, #00f2fe);
-    color: white;
-    font-size: 16px;
-    cursor: pointer;
-    transition: 0.3s;
+width:100%;
+padding:12px;
+border-radius:6px;
+border:none;
+background:linear-gradient(90deg,#4facfe,#00f2fe);
+color:white;
+cursor:pointer;
+transition:0.3s;
 }
-
 button:hover {
-    opacity: 0.9;
-    transform: scale(1.02);
+transform:scale(1.05);
+box-shadow:0 0 10px #4facfe;
 }
 
-.result {
-    margin-top: 15px;
-    font-weight: bold;
-    font-size: 18px;
-}
+.result { margin-top:15px; font-weight:bold; font-size:18px; }
 
 table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 20px;
-    text-align: center;
+width:100%;
+border-collapse:collapse;
+margin-top:20px;
+text-align:center;
 }
+th, td { border:1px solid #333; padding:10px; }
+th { background:#222; }
 
-th, td {
-    border: 1px solid #333;
-    padding: 10px;
-}
-
-th {
-    background-color: #222;
-}
-
-a {
-    color: #4facfe;
-    text-decoration: none;
-}
-
-a:hover {
-    text-decoration: underline;
-}
+a { color:#4facfe; }
 
 .footer {
-    margin-top: 40px;
-    font-size: 14px;
-    color: #aaa;
-    text-align: center;
+margin-top:40px;
+font-size:14px;
+color:#aaa;
+text-align:center;
 }
 </style>
 </head>
 
 <body>
 
+<div class="navbar">
+<a href="index.html">Home</a>
+<a href="what-is-bmi.html">What is BMI?</a>
+<a href="healthy-weight-tips.html">Healthy Tips</a>
+<a href="products.html">Products</a>
+</div>
+
 <div class="container">
 
-<h1 style="text-align:center;">Free BMI Calculator for Indian Adults</h1>
-
-<p style="text-align:center;">
-Use this free BMI calculator to instantly check your Body Mass Index and understand your healthy weight category.
-</p>
-
 <div class="card">
-
-<h2>Calculate Your BMI</h2>
+<h1>Free BMI Calculator</h1>
 
 <input type="number" id="weight" placeholder="Enter Weight (kg)">
 <input type="number" id="height" placeholder="Enter Height (cm)">
-
 <button onclick="calculateBMI()">Calculate BMI</button>
 
 <div class="result" id="result"></div>
-
 </div>
 
 <div class="card">
-
 <h2>About BMI</h2>
 
-<p>
-Body Mass Index (BMI) is a simple formula that uses your height and weight to estimate whether you are underweight, normal, overweight, or obese.
-</p>
-
 <table>
-<tr>
-<th>BMI Range</th>
-<th>Category</th>
-<th>Health Risk</th>
-</tr>
-
-<tr>
-<td>Below 18.5</td>
-<td style="color:#4fc3f7;">Underweight</td>
-<td>Nutritional deficiency risk</td>
-</tr>
-
-<tr>
-<td>18.5 – 22.9</td>
-<td style="color:#66bb6a;">Normal</td>
-<td>Low health risk</td>
-</tr>
-
-<tr>
-<td>23 – 24.9</td>
-<td style="color:#ffa726;">Overweight</td>
-<td>Moderate risk</td>
-</tr>
-
-<tr>
-<td>25 and above</td>
-<td style="color:#ef5350;">Obese</td>
-<td>High risk of lifestyle diseases</td>
-</tr>
+<tr><th>BMI Range</th><th>Category</th><th>Health Risk</th></tr>
+<tr><td>Below 18.5</td><td style="color:#4fc3f7;">Underweight</td><td>Nutritional deficiency risk</td></tr>
+<tr><td>18.5 – 22.9</td><td style="color:#66bb6a;">Normal</td><td>Low risk</td></tr>
+<tr><td>23 – 24.9</td><td style="color:#ffa726;">Overweight</td><td>Moderate risk</td></tr>
+<tr><td>25+</td><td style="color:#ef5350;">Obese</td><td>High risk</td></tr>
 </table>
 
 <p style="margin-top:20px;">
-Indian BMI standards are slightly stricter because health risks such as diabetes and heart disease may occur at lower BMI levels in Asian populations.
+Learn more in our <a href="what-is-bmi.html">BMI Guide</a> or read 
+<a href="healthy-weight-tips.html">Healthy Weight Tips</a>.
 </p>
-
-<p>
-Learn more in our <a href="what-is-bmi.html">Complete BMI Guide</a>.<br>
-Read <a href="healthy-weight-tips.html">Healthy Weight Tips</a>.<br>
-Explore <a href="products.html">Recommended Fitness Products</a>.
-</p>
-
 </div>
 
 <div class="footer">
@@ -188,27 +134,17 @@ Contact: <a href="mailto:anilvella999@gmail.com">anilvella999@gmail.com</a><br>
 
 <script>
 function calculateBMI() {
-var weight = document.getElementById("weight").value;
-var height = document.getElementById("height").value;
-
-if (weight === "" || height === "") {
-document.getElementById("result").innerHTML = "Please enter valid values.";
-return;
-}
-
-height = height / 100;
-var bmi = weight / (height * height);
-bmi = bmi.toFixed(2);
-
-var category = "";
-
-if (bmi < 18.5) category = "Underweight";
-else if (bmi < 23) category = "Normal";
-else if (bmi < 25) category = "Overweight";
-else category = "Obese";
-
-document.getElementById("result").innerHTML =
-"Your BMI: " + bmi + "<br>Category: " + category;
+var weight=document.getElementById("weight").value;
+var height=document.getElementById("height").value;
+if(weight==""||height==""){document.getElementById("result").innerHTML="Please enter valid values.";return;}
+height=height/100;
+var bmi=(weight/(height*height)).toFixed(2);
+var category="";
+if(bmi<18.5)category="Underweight";
+else if(bmi<23)category="Normal";
+else if(bmi<25)category="Overweight";
+else category="Obese";
+document.getElementById("result").innerHTML="Your BMI: "+bmi+"<br>Category: "+category;
 }
 </script>
 
