--- a/products.html
+++ b/products.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 <meta charset="UTF-8">
 <title>Recommended Fitness Products</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 <style>
-body { margin:0; font-family:Arial; background:#121212; color:#fff; }
-.navbar { background:#1a1a1a; padding:15px; text-align:center; border-bottom:1px solid #2a2a2a; }
-.navbar a { color:#fff; margin:0 15px; text-decoration:none; font-weight:bold; }
-.navbar a:hover { color:#4facfe; }
-.container { max-width:900px; margin:auto; padding:20px; }
-.card { background:#1e1e1e; padding:25px; border-radius:12px; border:1px solid #2a2a2a; margin-top:20px; }
-.product { display:block; padding:12px; margin:10px 0; background:linear-gradient(90deg,#4facfe,#00f2fe); color:white; text-decoration:none; border-radius:6px; }
-.product:hover { opacity:0.9; }
-.footer { margin-top:40px; font-size:14px; color:#aaa; text-align:center; }
+body{margin:0;font-family:Arial;background:#121212;color:#fff;}
+.navbar{position:sticky;top:0;background:#1a1a1a;padding:15px;text-align:center;}
+.navbar a{color:#fff;margin:0 15px;text-decoration:none;font-weight:bold;}
+.navbar a:hover{color:#4facfe;}
+.container{max-width:900px;margin:auto;padding:20px;}
+.card{background:#1e1e1e;padding:25px;border-radius:12px;margin-top:20px;}
+.product{display:block;background:linear-gradient(90deg,#4facfe,#00f2fe);padding:12px;margin:10px 0;color:#fff;text-decoration:none;border-radius:6px;}
+.footer{text-align:center;margin-top:40px;color:#aaa;}
+a{color:#4facfe;}
 </style>
 </head>
-
 <body>
 
 <div class="navbar">
@@ -25,43 +23,23 @@ body { margin:0; font-family:Arial; background:#121212; color:#fff; }
 <a href="what-is-bmi.html">What is BMI?</a>
 <a href="healthy-weight-tips.html">Healthy Tips</a>
 <a href="products.html">Products</a>
+<a href="about.html">About</a>
 </div>
 
 <div class="container">
-
 <div class="card">
 <h1>Recommended Fitness Products</h1>
-
-<h3>Underweight</h3>
 <a class="product" href="https://amzn.to/3OCTjGa" target="_blank">MuscleBlaze Mass Gainer</a>
 <a class="product" href="https://amzn.to/474Itiv" target="_blank">Whey Protein</a>
-<a class="product" href="https://amzn.to/4r0xde6" target="_blank">Natural Peanut Butter</a>
-
-<h3>Normal BMI</h3>
-<a class="product" href="https://amzn.to/4qVkxoP" target="_blank">Yoga Mat</a>
-<a class="product" href="https://amzn.to/4cnronD" target="_blank">Resistance Bands</a>
-<a class="product" href="https://amzn.to/4rGeztm" target="_blank">Fitness Band</a>
-
-<h3>Overweight</h3>
-<a class="product" href="https://amzn.to/4rBEMsP" target="_blank">Digital Weighing Scale</a>
-<a class="product" href="https://amzn.to/3OQZF4N" target="_blank">Skipping Rope</a>
-<a class="product" href="https://amzn.to/3MThgZk" target="_blank">Dumbbells Set</a>
-
-<h3>Obese</h3>
-<a class="product" href="https://amzn.to/4aWfEGe" target="_blank">Body Fat Analyzer Scale</a>
-<a class="product" href="https://amzn.to/3MM1P5c" target="_blank">Exercise Cycle</a>
-<a class="product" href="https://amzn.to/4lhRr21" target="_blank">Treadmill</a>
-
-<p style="margin-top:20px;font-size:13px;">
-As an Amazon Associate, I earn from qualifying purchases.
-</p>
+<a class="product" href="https://amzn.to/4r0xde6" target="_blank">Peanut Butter</a>
+<p>As an Amazon Associate, I earn from qualifying purchases.</p>
 </div>
 
 <div class="footer">
-Contact: <a href="mailto:anilvella999@gmail.com" style="color:#4facfe;">anilvella999@gmail.com</a><br>
+Contact: <a href="mailto:anilvella999@gmail.com">anilvella999@gmail.com</a><br>
 © 2026 Anil BMI Calculator
 </div>
-
 </div>
+
 </body>
 </html>
