--- a/what-is-bmi.html
+++ b/what-is-bmi.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 <meta charset="UTF-8">
-<title>What is BMI?</title>
+<title>Recommended Fitness Products</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 <style>
-body { margin:0; font-family:Arial; background:#121212; color:#fff; }
-.navbar { background:#1a1a1a; padding:15px; text-align:center; border-bottom:1px solid #2a2a2a; }
-.navbar a { color:#fff; margin:0 15px; text-decoration:none; font-weight:bold; }
-.navbar a:hover { color:#4facfe; }
-.container { max-width:900px; margin:auto; padding:20px; }
-.card { background:#1e1e1e; padding:25px; border-radius:12px; border:1px solid #2a2a2a; margin-top:20px; }
-.footer { margin-top:40px; font-size:14px; color:#aaa; text-align:center; }
-a { color:#4facfe; }
+body{margin:0;font-family:Arial;background:#121212;color:#fff;}
+.navbar{position:sticky;top:0;background:#1a1a1a;padding:15px;text-align:center;}
+.navbar a{color:#fff;margin:0 15px;text-decoration:none;font-weight:bold;}
+.navbar a:hover{color:#4facfe;}
+.container{max-width:900px;margin:auto;padding:20px;}
+.card{background:#1e1e1e;padding:25px;border-radius:12px;margin-top:20px;}
+.product{display:block;background:linear-gradient(90deg,#4facfe,#00f2fe);padding:12px;margin:10px 0;color:#fff;text-decoration:none;border-radius:6px;}
+.footer{text-align:center;margin-top:40px;color:#aaa;}
+a{color:#4facfe;}
 </style>
 </head>
-
 <body>
 
 <div class="navbar">
@@ -24,35 +23,23 @@ a { color:#4facfe; }
 <a href="what-is-bmi.html">What is BMI?</a>
 <a href="healthy-weight-tips.html">Healthy Tips</a>
 <a href="products.html">Products</a>
+<a href="about.html">About</a>
 </div>
 
 <div class="container">
-
 <div class="card">
-<h1>What is BMI?</h1>
-
-<p>Body Mass Index (BMI) is a measurement that uses height and weight to estimate whether a person has a healthy body weight.</p>
-
-<p><strong>BMI Formula:</strong> Weight (kg) / Height (m²)</p>
-
-<p>BMI is widely used as a screening tool to identify potential health risks.</p>
-
-<ul>
-<li>Below 18.5 – Underweight</li>
-<li>18.5 – 22.9 – Normal</li>
-<li>23 – 24.9 – Overweight</li>
-<li>25+ – Obese</li>
-</ul>
-
-<p><a href="index.html">← Back to BMI Calculator</a></p>
-
+<h1>Recommended Fitness Products</h1>
+<a class="product" href="https://amzn.to/3OCTjGa" target="_blank">MuscleBlaze Mass Gainer</a>
+<a class="product" href="https://amzn.to/474Itiv" target="_blank">Whey Protein</a>
+<a class="product" href="https://amzn.to/4r0xde6" target="_blank">Peanut Butter</a>
+<p>As an Amazon Associate, I earn from qualifying purchases.</p>
 </div>
 
 <div class="footer">
 Contact: <a href="mailto:anilvella999@gmail.com">anilvella999@gmail.com</a><br>
 © 2026 Anil BMI Calculator
 </div>
-
 </div>
+
 </body>
 </html>
