--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+=<!DOCTYPE html>
 <html>
 <head>
 <meta charset="UTF-8">
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 body{margin:0;font-family:Arial;background:#121212;color:#fff;}
-.navbar{background:#1a1a1a;padding:15px;text-align:center;}
+.navbar{position:sticky;top:0;background:#1a1a1a;padding:15px;text-align:center;}
 .navbar a{color:#fff;margin:0 15px;text-decoration:none;font-weight:bold;}
 .container{max-width:900px;margin:auto;padding:20px;}
 .card{background:#1e1e1e;padding:25px;border-radius:12px;margin-top:20px;}
@@ -24,8 +24,9 @@ a{color:#4facfe;}
 <div class="container">
 <div class="card">
 <h1>About Us</h1>
-<p>This website provides a free BMI calculator and educational health information for Indian adults.</p>
+<p>This website provides a free BMI calculator tool and educational content related to healthy living for Indian adults.</p>
 </div>
+
 <div class="footer">
 Contact: <a href="mailto:anilvella999@gmail.com">anilvella999@gmail.com</a><br>
 © 2026 Anil BMI Calculator
