--- a/disclaimer.html
+++ b/disclaimer.html
@@ -1,23 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Disclaimer | Anil BMI Calculator</title>
+<meta charset="UTF-8">
+<title>Disclaimer</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-body { font-family: Arial; padding: 40px; line-height: 1.6; }
+body{margin:0;font-family:Arial;background:#121212;color:#fff;}
+.container{max-width:900px;margin:auto;padding:20px;}
+.card{background:#1e1e1e;padding:25px;border-radius:12px;margin-top:20px;}
+.footer{text-align:center;margin-top:40px;color:#aaa;}
+a{color:#4facfe;}
 </style>
 </head>
 <body>
 
-<h2>Disclaimer</h2>
+<div class="container">
+<div class="card">
+<h1>Disclaimer</h1>
+<p>This BMI calculator is provided for informational purposes only and should not be considered medical advice. Please consult a healthcare professional for proper medical guidance.</p>
+<p>As an Amazon Associate, I earn from qualifying purchases.</p>
+</div>
 
-<p>The BMI calculator provided on this website is for informational purposes only.</p>
-
-<p>It should not be considered medical advice. Always consult a qualified healthcare professional before making health decisions.</p>
-
-<p>We are not responsible for any actions taken based on the results of this tool.</p>
-
-<p><a href="index.html">Back to Home</a></p>
+<div class="footer">
+Contact: <a href="mailto:anilvella999@gmail.com">anilvella999@gmail.com</a><br>
+© 2026 Anil BMI Calculator
+</div>
+</div>
 
 </body>
 </html>
