--- a/what-is-bmi.html
+++ b/what-is-bmi.html
@@ -2,19 +2,67 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>What is BMI? Complete Guide</title>
+<title>What is BMI?</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-body{margin:0;font-family:Arial;background:#121212;color:#fff;}
-.navbar{position:sticky;top:0;background:#1a1a1a;padding:15px;text-align:center;border-bottom:1px solid #2a2a2a;}
-.navbar a{color:#fff;margin:0 15px;text-decoration:none;font-weight:bold;}
-.navbar a:hover{color:#4facfe;}
-.container{max-width:900px;margin:auto;padding:20px;}
-.card{background:#1e1e1e;padding:25px;border-radius:12px;border:1px solid #2a2a2a;margin-top:20px;}
-.footer{text-align:center;margin-top:40px;color:#aaa;}
+body{
+margin:0;
+font-family:Arial, sans-serif;
+background:#121212;
+color:#ffffff;
+}
+
+.navbar{
+position:sticky;
+top:0;
+background:#1a1a1a;
+padding:15px;
+text-align:center;
+border-bottom:1px solid #2a2a2a;
+}
+
+.navbar a{
+color:#ffffff;
+margin:0 15px;
+text-decoration:none;
+font-weight:bold;
+}
+
+.navbar a:hover{
+color:#4facfe;
+}
+
+.container{
+max-width:900px;
+margin:auto;
+padding:20px;
+}
+
+.card{
+background:#1e1e1e;
+padding:25px;
+border-radius:12px;
+border:1px solid #2a2a2a;
+margin-top:20px;
+line-height:1.6;
+}
+
+.footer{
+margin-top:40px;
+text-align:center;
+color:#aaa;
+font-size:14px;
+}
+
 a{color:#4facfe;}
-@media(max-width:600px){.navbar a{display:block;margin:8px 0;}}
+
+@media(max-width:600px){
+.navbar a{
+display:block;
+margin:8px 0;
+}
+}
 </style>
 </head>
 
@@ -29,26 +77,24 @@ a{color:#4facfe;}
 </div>
 
 <div class="container">
-<div class="card">
 
+<div class="card">
 <h1>What is BMI?</h1>
 
-<p>Body Mass Index (BMI) is a simple health measurement that uses your weight and height to estimate whether your body weight is within a healthy range.</p>
+<p>Body Mass Index (BMI) is a health measurement that compares your weight to your height.</p>
 
 <p><strong>Formula:</strong> BMI = Weight (kg) / Height (m²)</p>
 
-<p>For example, if a person weighs 70 kg and is 1.7 meters tall:</p>
-<p>70 / (1.7 × 1.7) = 24.22</p>
+<p>It helps classify individuals into weight categories and identify possible health risks.</p>
 
-<h2>BMI Categories for Indian Adults</h2>
+<h2>BMI Categories (Indian Standard)</h2>
+
 <ul>
 <li>Below 18.5 – Underweight</li>
 <li>18.5 – 22.9 – Normal</li>
 <li>23 – 24.9 – Overweight</li>
-<li>25 and above – Obese</li>
+<li>25+ – Obese</li>
 </ul>
-
-<p>BMI is widely used as a screening tool but does not directly measure body fat percentage.</p>
 
 <p><a href="index.html">← Back to BMI Calculator</a></p>
 
