--- a/products.html
+++ b/products.html
@@ -1,21 +1,87 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
 <title>Recommended Fitness Products</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <style>
-body{margin:0;font-family:Arial;background:#121212;color:#fff;}
-.navbar{position:sticky;top:0;background:#1a1a1a;padding:15px;text-align:center;}
-.navbar a{color:#fff;margin:0 15px;text-decoration:none;font-weight:bold;}
-.navbar a:hover{color:#4facfe;}
-.container{max-width:900px;margin:auto;padding:20px;}
-.card{background:#1e1e1e;padding:25px;border-radius:12px;margin-top:20px;}
-.product{display:block;background:linear-gradient(90deg,#4facfe,#00f2fe);padding:12px;margin:10px 0;color:#fff;text-decoration:none;border-radius:6px;}
-.footer{text-align:center;margin-top:40px;color:#aaa;}
+body{
+margin:0;
+font-family:Arial, sans-serif;
+background:#121212;
+color:#ffffff;
+}
+
+.navbar{
+position:sticky;
+top:0;
+background:#1a1a1a;
+padding:15px;
+text-align:center;
+border-bottom:1px solid #2a2a2a;
+}
+
+.navbar a{
+color:#ffffff;
+margin:0 15px;
+text-decoration:none;
+font-weight:bold;
+}
+
+.navbar a:hover{
+color:#4facfe;
+}
+
+.container{
+max-width:900px;
+margin:auto;
+padding:20px;
+}
+
+.card{
+background:#1e1e1e;
+padding:25px;
+border-radius:12px;
+border:1px solid #2a2a2a;
+margin-top:20px;
+}
+
+.product{
+display:block;
+padding:12px;
+margin:10px 0;
+background:linear-gradient(90deg,#4facfe,#00f2fe);
+color:white;
+text-decoration:none;
+border-radius:6px;
+text-align:center;
+transition:0.3s;
+}
+
+.product:hover{
+transform:scale(1.03);
+box-shadow:0 0 8px #4facfe;
+}
+
+.footer{
+margin-top:40px;
+text-align:center;
+color:#aaa;
+font-size:14px;
+}
+
 a{color:#4facfe;}
+
+@media(max-width:600px){
+.navbar a{
+display:block;
+margin:8px 0;
+}
+}
 </style>
 </head>
+
 <body>
 
 <div class="navbar">
@@ -27,18 +93,32 @@ a{color:#4facfe;}
 </div>
 
 <div class="container">
+
 <div class="card">
+
 <h1>Recommended Fitness Products</h1>
+
+<h3>Underweight</h3>
 <a class="product" href="https://amzn.to/3OCTjGa" target="_blank">MuscleBlaze Mass Gainer</a>
 <a class="product" href="https://amzn.to/474Itiv" target="_blank">Whey Protein</a>
 <a class="product" href="https://amzn.to/4r0xde6" target="_blank">Peanut Butter</a>
-<p>As an Amazon Associate, I earn from qualifying purchases.</p>
+
+<h3>Normal BMI</h3>
+<a class="product" href="https://amzn.to/4qVkxoP" target="_blank">Yoga Mat</a>
+<a class="product" href="https://amzn.to/4cnronD" target="_blank">Resistance Bands</a>
+<a class="product" href="https://amzn.to/4rGeztm" target="_blank">Fitness Band</a>
+
+<p style="margin-top:20px;font-size:13px;">
+As an Amazon Associate, I earn from qualifying purchases.
+</p>
+
 </div>
 
 <div class="footer">
 Contact: <a href="mailto:anilvella999@gmail.com">anilvella999@gmail.com</a><br>
 © 2026 Anil BMI Calculator
 </div>
+
 </div>
 
 </body>
