--- a/products.html
+++ b/products.html
@@ -64,6 +64,12 @@ transform:scale(1.03);
 box-shadow:0 0 8px #4facfe;
 }
 
+.section-title{
+margin-top:25px;
+border-bottom:1px solid #333;
+padding-bottom:8px;
+}
+
 .footer{
 margin-top:40px;
 text-align:center;
@@ -98,15 +104,29 @@ margin:8px 0;
 
 <h1>Recommended Fitness Products</h1>
 
-<h3>Underweight</h3>
+<!-- Underweight -->
+<h3 class="section-title">Underweight (BMI below 18.5)</h3>
 <a class="product" href="https://amzn.to/3OCTjGa" target="_blank">MuscleBlaze Mass Gainer</a>
 <a class="product" href="https://amzn.to/474Itiv" target="_blank">Whey Protein</a>
-<a class="product" href="https://amzn.to/4r0xde6" target="_blank">Peanut Butter</a>
+<a class="product" href="https://amzn.to/4r0xde6" target="_blank">Natural Peanut Butter</a>
 
-<h3>Normal BMI</h3>
-<a class="product" href="https://amzn.to/4qVkxoP" target="_blank">Yoga Mat</a>
-<a class="product" href="https://amzn.to/4cnronD" target="_blank">Resistance Bands</a>
-<a class="product" href="https://amzn.to/4rGeztm" target="_blank">Fitness Band</a>
+<!-- Normal -->
+<h3 class="section-title">Normal BMI (18.5 – 22.9)</h3>
+<a class="product" href="https://amzn.to/4qVkxoP" target="_blank">Anti Slip Yoga Mat</a>
+<a class="product" href="https://amzn.to/4cnronD" target="_blank">Resistance Bands Set</a>
+<a class="product" href="https://amzn.to/4rGeztm" target="_blank">Fitness Band with Heart Rate Monitor</a>
+
+<!-- Overweight -->
+<h3 class="section-title">Overweight (23 – 24.9)</h3>
+<a class="product" href="https://amzn.to/4rBEMsP" target="_blank">Digital Weighing Scale</a>
+<a class="product" href="https://amzn.to/3OQZF4N" target="_blank">Skipping Rope</a>
+<a class="product" href="https://amzn.to/3MThgZk" target="_blank">Dumbbells Set</a>
+
+<!-- Obese -->
+<h3 class="section-title">Obese (25+)</h3>
+<a class="product" href="https://amzn.to/4aWfEGe" target="_blank">Body Fat Analyzer Scale</a>
+<a class="product" href="https://amzn.to/3MM1P5c" target="_blank">Exercise Cycle</a>
+<a class="product" href="https://amzn.to/4lhRr21" target="_blank">Treadmill</a>
 
 <p style="margin-top:20px;font-size:13px;">
 As an Amazon Associate, I earn from qualifying purchases.
